@@ -1,11 +1,6 @@
-<!-- indexer::stop -->
-<div class="iso_cart_mini block <?php echo $this->class; ?>"<?php echo $this->cssID; ?><?php if ($this->style): ?> style="<?php echo $this->style; ?>"<?php endif; ?>">
 
-<?php if($this->headline): ?>
-<<?php echo $this->hl; ?>><?php echo $this->headline; ?></<?php echo $this->hl; ?>>
-<?php endif; ?>
+<div class="cart_mini_table">
 
-<?php if(count($this->products)): ?>
 <table class="productWrapper">
 	<tfoot>
 		<tr class="subtotal">
@@ -21,14 +16,8 @@
 			<td class="price"><?php echo $product['total_price']; ?></td>
 		</tr>
 <?php endforeach; ?>
-<?php else: ?>
-		<tr class="subtotal">
-			<td class="empty"><?php echo $this->message; ?></td>
-        </tr>
-<?php endif; ?>
 	</tbody>
 </table>
 <a class="checkout" style="float:right" href="<?php echo $this->checkoutJumpTo; ?>"><span><?php echo $this->checkoutJumpToLabel; ?></span></a>
 <a class="cart" href="<?php echo $this->cartJumpTo; ?>"><span><?php echo $this->cartLabel; ?></span></a>
 </div>
-<!-- indexer::start -->
